syntax = "proto2";

package scifirpg;
option java_package = "com.eldritch.invoken.proto";

import "com/eldritch/scifirpg/proto/disciplines.proto";
import "com/eldritch/scifirpg/proto/prerequisites.proto";
import "com/eldritch/scifirpg/proto/missions.proto";
import "com/eldritch/scifirpg/proto/outcomes.proto";

message DialogueTree {
	// DialogueTree ends when the player reaches a Response with no choices.
	// When the DialogueTree ends, the player is returned to the first valid greeting.
	message Response {
		optional string id = 1; // The unique ID for this Response within this tree
		required string text = 2;
		repeated Prerequisite prereq = 3;
		repeated Choice choice = 4;
		repeated Outcome outcome = 5;
		required bool greeting = 6 [default = false];

		// Defines the order responses are traversed for finding one that meets prereqs.
		// Higher weights drop down, lower weights bubble up.
		optional int32 weight = 7 [default = 0];
	}

	// By storing successor pointers as strings, we allow for cycles
	message Choice {
		required string text = 1;
		repeated Prerequisite prereq = 2;
		repeated string successor_id = 3;

		// Defines the order dialogue choices are displayed.
		// Higher weights drop down, lower weights bubble up.
		optional int32 weight = 4 [default = 0];
	}

	// We keep all Response options as a list, then convert them to a map in memory so we
	// can traverse the DialogueTree via pointers in Choices.  Some Responses are marked
	// as greetings, and one of these will serve as the 'root' of the tree.
	//
	// Multiple greetings are possible depending on what prereqs are met.
	// Order matters as the first greeting to meet all prereqs will be chosen,
	// even if multiple options are satisfied.
	//
	// A DialogueTree exists in isolation, unique to a particular Actor.  No Response is
	// shared in this design.
	repeated Response dialogue = 1;
}

message ActorParams {
	enum Species {
		HUMAN = 0;
		BEAST = 1;
		AUTOMATON = 2;
		UNDEAD = 3;
		INVOKEN = 4;
		HOLLOW = 5;
	}

	enum Gender {
		MALE = 0;
		FEMALE = 1;
	}

	message Skill {
		required Discipline discipline = 1;
		required int32 level = 2;
		optional int32 xp = 3; // ignored for NPCs
	}

	message FactionStatus {
		optional string faction_id = 1; // OPTIONAL: might change to int32
		optional int32 reputation = 2;
		optional int32 rank = 3;
	}

	message InventoryItem {
		optional string item_id = 1; // OPTIONAL: may change to int32
		required int32 count = 2 [default = 1];
		optional double drop_chance = 3 [default = 1.0]; // ignored for player
	}

	// Names for various dialogue scenarios
	optional string id = 1; // unique key
	required string name = 2;

	// Static info
	required Species species = 3;
	optional Gender gender = 4;
	optional Profession profession = 5;

	// Dynamic info
	required int32 level = 6;
	repeated Skill skill = 7;
	repeated FactionStatus faction_status = 8;
	repeated InventoryItem inventory_item = 9;
	repeated string known_aug_id = 10;
}

message NonPlayerActor {
	message Trait {
		required Influence influence = 1;
		required bool effective = 2;
	}

	/*
	enum Trait {
		AFFABLE = 0;
		SURLY = 1;
		GREEDY = 2;
		ALTRUISTIC = 3;
		LICENTIOUS = 4;
		CHASTE = 5;
		DOGMATIC = 6;
		RATIONAL = 7;
		INSECURE = 8;
		CONFIDENT = 9;
		GULLIBLE = 10;
		SHREWD = 11;
		DOCILE = 12;
		IMPOSING = 13;
	}
	*/

	enum Aggression {
		PACIFIST = 0; // Does not attack anyone
		UNAGGRESSIVE = 1; // Will attack if provoked
		AGGRESSIVE = 2; // Will attack enemies on sight
		HOSTILE = 3; // Attack enemies and neutral on sight
		FRENZIED = 4; // Attacks anyone on sight
	}

	enum Assistance {
		DETACHED = 0; // Helps no one in combat
		LOYAL = 1; // Helps allies in combat
		CHIVALRIC = 2; // Helps allies in combat and assists neutral when attacked
	}

	enum Confidence {
		COWARDLY = 0; // Never instigates combat, attempts to flee if engaged
		CAUTIOUS = 1; // Only instigate combat with low levels, flee high levels when engaged
		CAPABLE = 2; // Instigate with similar levels and below, flee from high levels when engaged
		BRAVE = 3; // Instigate combat with any enemy, flee only if outmatched
		RECKLESS = 4; // Instigate combat with any enemy, never flees
	}

	required ActorParams params = 1;
	required bool unique = 2 [default = false];
	required bool can_speak = 3 [default = true];
	optional DialogueTree dialogue = 4;

	optional Aggression aggression = 5 [default = AGGRESSIVE];
	optional Assistance assistance = 6 [default = LOYAL];
	optional Confidence confidence = 7 [default = CAPABLE];
	repeated Trait trait = 8;
}

message PlayerActor {
	message StagedAugmentation {
		// Every aug has a slot requirement R.  By staging an aug, you fill up
		// R slots in the actor's slot bank.  Augs can be staged multiple times.
		// For every stage, an aug grants one use.
		optional string aug_id = 1; // OPTIONAL: may change to int32
		required int32 remaining_uses = 2;
		required int32 stages = 3;
	}

	message StateMarker {
		required string name = 1;
		required int32 count = 2 [default = 1];
	}

	required ActorParams params = 1;

	optional int32 health = 7; // remaining, max health is calculated
	repeated string equipped_item_id = 21; // NPC: if not specified, inferred from inventory
	repeated StagedAugmentation staged_augmentation = 16; // if not specified, inferred from known augs

	repeated StateMarker state_marker = 19;
	repeated string known_npc = 20;
	repeated Mission mission = 22;
}
